# Machine-Learning-Module

./: README.md  environment.yml  pyproject.toml  setup.py
Module_05/ex_00/: matrix.py
Module_05/ex_01/: TinyStatistician.py
Module_05/ex_02/: prediction.py
Module_05/ex_03/: tools.py
Module_05/ex_04/: prediction.py
Module_05/ex_05/: plot.py
Module_05/ex_06/: loss.py
Module_05/ex_07/: vec_loss.py
Module_05/ex_08/: plot.py
Module_05/ex_09/: other_losses.py
Module_06/ex_00/: gradient.py
Module_06/ex_01/: vec_gradient.py
Module_06/ex_02/: fit.py
Module_06/ex_03/: my_linear_regression.py
Module_06/ex_04/: linear_model.py
Module_06/ex_05/: z_score.py
Module_06/ex_06/: minmax.py
Module_07/ex_00/: prediction.py
Module_07/ex_01/: prediction.py
Module_07/ex_02/: loss.py
Module_07/ex_03/: gradient.py
Module_07/ex_04/: fit.py
Module_07/ex_05/: mylinearregression.py
tests/Module_05/: test_ex00.py  test_ex01.py  test_ex02.py  test_ex03.py  test_ex04.py  test_ex06.py  test_ex07.py  test_ex09.py
tests/Module_06/: test_ex00.py  test_ex01.py
tests/Module_07/: test_ex00.py  test_ex01.py  test_ex02.py  test_ex03.py
