[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

# Since we're using a flat structure package, we need this for setuptools to know which folders to create the package with
[tool.setuptools.packages.find]
include = ['Module_*']

[project]
name = "Machine-Learning-Module"
version = "1.0.0"
authors = [
    {name = "Gaetan Vizet", email = "gaetan.vizet@hotmail.fr"},
]
description = "A package containing programs that introduce us to Machine Learning with Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers - Students",
    "Topic :: Machine Learning",
    "Topic :: Python",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: >=3.7",
    "Operating System :: Linux",
]
dependencies = [
    "pip",
    "pytest",
    "pycodestyle",
]

[project.urls]
"Homepage" = "https://github.com/gavizet/Machine-Learning-Module"